--- a/app/views/device.html
+++ b/app/views/device.html
@@ -1,10 +1,12 @@
 <div>
-  <div class="input-group">
-    <input type="text" class="form-control" ng-model="vm.message" ng-required placeholder="メッセージを入力してください">
-    <span class="input-group-btn">
-      <button type="button" class="btn btn-primary" ng-click="vm.send()">投稿</button>
-    </span>
-  </div>
+  <form name="message" ng-submit="vm.send()">
+    <div class="input-group">
+      <input type="text" name="message" class="form-control" ng-model="vm.message" ng-required placeholder="メッセージを入力してください">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary">投稿</button>
+      </span>
+    </div>
+  </form>
   <div class="list-group">
     <div class="list-group-item" ng-class="{'list-group-item-success': message.mine}" ng-repeat="message in vm.messages">
       {{message.text}}
