--- a/app/views/device.html
+++ b/app/views/device.html
@@ -1,7 +1,7 @@
 <div>
   <form name="message" ng-submit="vm.send()">
     <div class="input-group">
-      <input type="text" name="message" class="form-control" ng-model="vm.message" ng-required placeholder="メッセージを入力してください">
+      <input type="text" name="message" class="form-control" required ng-model="vm.message" placeholder="メッセージを入力してください">
       <span class="input-group-btn">
         <button type="submit" class="btn btn-primary">投稿</button>
       </span>
