デバイス名を表示

--- a/app/views/device.html
+++ b/app/views/device.html
@@ -1,4 +1,5 @@
 <div>
+  <h3>{{vm.messages.deviceName}}</h3>
   <form name="message" ng-submit="vm.send()">
     <div class="input-group">
       <input type="text" name="message" class="form-control" required ng-model="vm.message" placeholder="メッセージを入力してください">
